<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_discover"
        app:showAsAction="ifRoom|withText"
        android:enabled="true"
        android:icon="@drawable/ic_movie_24dp"
        android:title="@string/discover" />
    <item
        android:id="@+id/action_my_list"
        app:showAsAction="ifRoom|withText"
        android:enabled="true"
        android:icon="@drawable/ic_list_24"
        android:title="@string/mylist" />

    <item
        android:id="@+id/action_manual_add"
        app:showAsAction="always|withText"
        android:enabled="true"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/addmovie" />

    <item
        android:id="@+id/action_profile"
        app:showAsAction="always|withText"
        android:enabled="true"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/profileText" />

</menu>