<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        android:icon="@drawable/ic_search_24dp"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add_24dp"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_24dp"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />

</menu>