<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:text="@string/message" />

    <Button
        android:id="@+id/btnyes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes" />

    <Button
        android:id="@+id/btncancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>