<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="bottom"
        android:background="@drawable/gradient_color1"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingTop="120dp"
            android:paddingEnd="10dp"
            android:text="@string/title"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/date"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_dot_24" />

            <TextView
                android:id="@+id/genreText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/genre"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/rectangular">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_weight="5"
                android:layout_gravity="center"
                android:text="@string/language"
                android:textColor="@color/LightGrey"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/ratingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_gravity="center|end"
                android:text="@string/ratingstar"
                android:textColor="@color/LightGrey"
                android:textSize="24sp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="10dp"
                app:srcCompat="@drawable/ic_star_24dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/LightGrey"
        android:background="@drawable/rectangular"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rectangular"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            app:srcCompat="@drawable/ic_comment_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/allComm"
            android:layout_gravity="center"
            android:textColor="@color/LightGrey"
        />
        

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:scrollbars="vertical">
    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>

</ScrollView>
