<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/TransparencyBlue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/movieType"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/ic_movie_type_24" />

        <TextView
            android:id="@+id/typeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/movieType"
            android:textColor="@color/LightGrey"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/moviespinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/movieType"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/TransparencyBlue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/movie_icon"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/ic_movie_24dp" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/title"
            android:textColor="@color/LightGrey"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="#00000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/TransparencyBlue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/director_icon"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/ic_person_24dp" />

        <TextView
            android:id="@+id/directorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/director"
            android:textColor="@color/LightGrey"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/directorEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="#00000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/TransparencyBlue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/rating_icon"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/ic_star_24dp" />

        <TextView
            android:id="@+id/ratingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/rating"
            android:textColor="@color/LightGrey"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/ratingEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:inputType="numberDecimal"
            android:background="#00000000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/release_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/TransparencyBlue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/date_icon"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/ic_date_range_24dp" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/date"
            android:textColor="@color/LightGrey"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/TransparencyBlue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/genre_icon"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/ic_tag_faces_24dp" />

        <TextView
            android:id="@+id/genreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/genre"
            android:textColor="@color/LightGrey"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/genre"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/TransparencyBlue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/favourite_icon"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/ic_full_favorite_24" />

        <TextView
            android:id="@+id/favouriteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/favourite"
            android:textColor="@color/LightGrey"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/favourite_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:background="@color/LightBlue"
        android:src ="@drawable/ic_add_24dp" />

</LinearLayout>
